--- a/scss-css/blocks/reviews.scss
+++ b/scss-css/blocks/reviews.scss
@@ -70,6 +70,13 @@
   .guide-name {
     font-size: 14px;
   }
+
+  .arrow-right {
+    translate: -20px -12px;
+  }
+  .arrow-left {
+    translate: 20px 0px;
+  }
 }
 
 @media (min-width: 1024px) {
