--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -607,6 +607,12 @@
   .guide-name {
     font-size: 14px;
   }
+  .arrow-right {
+    translate: -20px -12px;
+  }
+  .arrow-left {
+    translate: 20px 0px;
+  }
 }
 @media (min-width: 1024px) {
   .reviews-title {
