--- a/scss-css/blocks/header.css
+++ b/scss-css/blocks/header.css
@@ -176,9 +176,9 @@
     position: relative;
     top: 0;
     right: 5px;
-    padding: 0px;
+    padding: 20px 0px 0px 0px;
     margin: 0px;
-    min-width: 470px;
+    min-width: 460px;
     border-radius: inherit;
     outline: none;
   }
